# smtplibaio

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  README.rst  exceptions.py  pyproject.toml  setup.py  smtp.py  smtplibaio.py  streams.py
smtplibaio/: __init__.py  exceptions.py  smtp.py  streams.py
tests/: conftest.py  context.py  test_smtp.py
