[tool.poetry]
name = "smtplibaio"
version = "2.1.2"
description = "An async version of smtplib"
authors = ["Olaf Gladis <github@gladis.org>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/hwmrocker/smtplibaio"
repository = "https://github.com/hwmrocker/smtplibaio"
# classifiers = [
#     "License :: OSI Approved :: MIT License"
#     "Programming Language :: Python :: 3 :: Only"
#     "Programming Language :: Python :: 3.5"
#     "Topic :: Communications :: Email"
# ]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
